@@ -1,5 +1,8 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+  Documentation:
+   - Clarify that uri_for_action works on private paths, with example.
+
 5.80017 2010-01-10 02:27:29
 
   Documentation:
